# pygeochemtools

./: .pip-lic-ignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
DH_chem_cli/: __init__.py  cli.py  version.py
docs/source/: api.rst  conf.py  examples.rst  getting_started.rst  index.rst  modules.rst  pygeochemtools.rst  pygeochemtools.utils.rst  requirements.rst  usage.rst  using_the_CLI.rst
docs/source/api/: api.rst  pygeochemtools.cli.rst  pygeochemtools.geochem.rst  pygeochemtools.map.rst  pygeochemtools.utils.rst
pygeochemtools/: __init__.py  _version.py  aggregation.py  cli.py  create_dataset.py  interpolate.py  main.py  max_dh_chem.py  normalisation.py  version.py
pygeochemtools/data/: config.yml  sarig_method_code_map.csv  user_config.yml
pygeochemtools/geochem/: __init__.py  aggregation.py  conversions.py  create_dataset.py  normalisation.py  transform.py
pygeochemtools/map/: __init__.py  interpolate.py  map.py
pygeochemtools/plot/: __init__.py  map.py
pygeochemtools/utils/: __init__.py  app_logger.py  config.py  export.py  log.py
source/: pygeochemtools.data.rst  pygeochemtools.geochem.rst  pygeochemtools.utils.rst
tests/: conftest.py  test_aggregation.py  test_cli.py  test_create_dataset.py  test_example.py  test_main.py
tests/test_data/: FeO_processed.csv  extract_element.csv  make_sarig_element_dataset_testdata.csv  sarig_wide_test1.csv  sarig_wide_test2.csv  sarig_wide_test3.csv  wide_methods_expected.csv
(+32 files in other folders)
