[metadata]
name = pygeochemtools
version = attr: pygeochemtools._version.__version__
description = An eclectic set of geochemical data manipulation, QC and plotting tools.
long_description = file: README.rst
long_description_content_type = text/markdown
license = MIT
author = Rian Dutch
author_email = riandutch@gmail.com
url = https://github.com/RADutchie/pygeochemtools
project_urls = 
    Documentation = https://pygeochemtools.readthedocs.io/en/latest/
    Blog = https://geodataanalytics.net/
keywords = 
    geology
    earth science
    geoscience
    exploration
    geochemistry
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    click>=8
    numpy>=1.20
    pandas>=1.2
    dask>=2021.6
    matplotlib>=3.3
    metpy>=1.0
    PyYAML>=5.0
    rich>=10.13


[options.extras_require]
cartopy = 
    Cartopy >= 0.19.0.post1


[options.entry_points]
console_scripts = 
    pygt = pygeochemtools.cli:cli

[options.packages.find]
exclude = 
    *.tests
    *.tests.*
    tests.*
    tests
